feat: add building type api handlers
